Added support for SASS

--- a/app/containers/App.scss
+++ b/app/containers/App.scss
@@ -1,11 +1,8 @@
 /*=============================================>>>>>
 = App Styles =
 ===============================================>>>>>*/
-body {
-
-}
 .navigation {
-  background: red;
+  background: $off-white;
 }
 .wrapper{
   max-width: 1200px;
