--- a/app/sass/base/_typography.scss
+++ b/app/sass/base/_typography.scss
@@ -13,11 +13,10 @@ body {
   word-wrap: break-word;
   text-rendering: optimizeLegibility;
   font-smoothing: antialiased;
-  @include media($mobile-down) {
-    font-size: 14px;
+  @include media-down(mobile) {
+    font-size: 10px;
   }
 }
-
 
 // --------------------------------------------------------------------------
 //   Headings
@@ -50,7 +49,7 @@ h4 { font-size: 16px; }
 h5 { font-size: 16px; }
 h6 { font-size: 14px; }
 
-@include media($mobile-down) {
+@include media-down(mobile) {
 
   h1 { font-size: 24px; }
   h2 { font-size: 22px; }
