--- a/app/sass/base/__variables.scss
+++ b/app/sass/base/__variables.scss
@@ -2,17 +2,23 @@
 = Body font colour =
 ===============================================>>>>>*/
 $textcolor: #222;
+
 /*=============================================>>>>>
 = Brand colours =
 ===============================================>>>>>*/
-$primary: #D95B43;
-$secondary: #EBD077;
-$tertiary: #54777B;
+$primary: #3F3F3F;
+$secondary: #B0A394;
+$tertiary: #2C405A;
 $highlight: #542537;
 $primary-darker: darken($primary, 5%);
 $secondary-darker: darken($secondary, 5%);
 $tertiary-darker: darken($tertiary, 5%);
 $highlight-darker: darken($highlight, 5%);
+
+/*=============================================>>>>>
+= Additional =
+===============================================>>>>>*/
+$border: #D8E5EE;
 
 /*=============================================>>>>>
 = Black/white =
@@ -34,11 +40,11 @@ $error: #d9534f;
 ===============================================>>>>>*/
 $twitter-hex: #00aced;
 $facebook-hex: #3b5998;
-$google-hex: #4285f4;
-$github-hex: #4078c0;
 $linkedin-hex: #007bb6;
 $youtube-hex: #bb0000;
 $tumblr-hex: #32506d;
 $instagram-hex: #517fa4;
 $vimeo-hex: #aad450;
 $lastfm-hex: #D51007;
+$google-hex: #4285f4;
+$github-hex: #4078c0;
