--- a/app/sass/base/_mixins.scss
+++ b/app/sass/base/_mixins.scss
@@ -74,3 +74,48 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+/*=============================================>>>>>
+= Position =
+===============================================>>>>>*/
+
+@mixin vertical-align($position: absolute) {
+  position: $position;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+@mixin horizontal-align($position: absolute) {
+  position: $position;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@mixin center-align($position: absolute) {
+  position: $position;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+}
+
+/*=============================================>>>>>
+= Clearfix =
+===============================================>>>>>*/
+
+@mixin clear {
+ // For modern browsers
+  &:before,
+  &:after {
+    content:" ";
+    display:table;
+  }
+
+  &:after {
+    clear:both;
+  }
+
+  // For IE 6/7 (trigger hasLayout)
+  & {
+    *zoom:1;
+  }
+}
